--- a/public/css/base.css
+++ b/public/css/base.css
@@ -35,3 +35,32 @@ a.btn{
 .red{
     color: red;
 }
+
+.menu {
+    border: 1px solid rgba(0,0,0,.15);
+    box-shadow: 0 6px 12px rgba(0,0,0,.175);
+    min-width: 160px;
+    background-color: #fff;
+    display: none;
+    position: relative;
+    list-style-type: none;
+    padding: 5px 0 0;
+    margin: 2px 0 0;
+}
+
+.menu > li > a{
+    color: #333;
+    font-weight: 400;
+    line-height: 1.42857143;
+    display: block;
+    clear: both;
+    padding: 3px 20px;
+    white-space: nowrap;
+    text-decoration: none;
+}
+
+.menu > li > a:hover{
+    text-decoration: none;
+    color: #262626;
+    background-color: #f5f5f5;
+}
